--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,11 @@ header nav ul li a {
     justify-content: center;
     color: white;
     text-align: center;
+
+    font-family:"Pinyon Script", serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: large;
 }
 
 .hero h2 {
